# PyPiPlayground

./: main.py  pyproject.toml
packer-2023/: pyproject.toml
packer-2023/src/: README.md
packer-core/: pyproject.toml
packer-core/src/packer/: Dillon.py  Love.py  main.py
packer-core/src/packer/players/: Dillon.py  DillonStats.txt  Love.py
packer-core/src/packer/players/historical/: Green.py
packer-core/test/: test_Both.py
packer-core/test/cases/: test_Both.py  test_Dillon.py  test_Love.py
src/2023/: stat.py
src/packer/: Dillon.py  Love.py
