[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypi-play-nspace-test"
version = "1.0.0"
authors = [
   { name="Luke Swanson", email="superscription58@gmail.com" }
]
description = "A subpackage of pypi-play for testing namespace package stuff"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LswaN58/PyPiPlayground"
"Bug Tracker" = "https://github.com/LswaN58/PyPiPlayground/issues"